Fixed alignment and font size for mobile view

--- a/styles/scp_contact_styles.css
+++ b/styles/scp_contact_styles.css
@@ -135,9 +135,9 @@ input {
 **/
 @media (max-width: 576px) {
     iframe {
-        margin: 4% 0 0 4%; /* Put the map to the middle */
-        width: 25rem;
-        height: 20rem;
+        margin: 30px 50px 0 45px; /* Put the map to the middle */
+        width: 30rem;
+        height: 25rem;
     }
 
     /* Form styles */
@@ -179,5 +179,10 @@ input {
 
     .accordion-body ul li, .accordion-body p {
         font-size: 15px;
+    }
+
+    /* font-size */
+    .accordion-body p {
+        font-size: 18px;
     }
 }
